[package]
name = "pg_playground"
version = "0.1.0"
authors = ["bkolad <blazejkolad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pg_playground"
path = "src/lib.rs"

[dependencies]
tokio-postgres = "0.5.4"
tokio = { version = "0.2.9", features = ["full"] }
bb8-postgres="0.4.0"
bb8="0.4.2"
